--- a/src/main/resources/assets/avaritia/lang/en_US.lang
+++ b/src/main/resources/assets/avaritia/lang/en_US.lang
@@ -26,7 +26,7 @@ item.avaritia:infinity_sword.name=Sword of the Cosmos
 item.avaritia:infinity_shovel.name=Planet Eater
 item.avaritia:infinity_axe.name=Nature's Ruin
 item.avaritia:infinity_bow.name=Longbow of the Heavens
-#item.avaritia.infinity_hoe.name=Hoe of the Green Earth
+item.avaritia:infinity_hoe.name=Hoe of the Green Earth
 item.avaritia:skullfire_sword.name=Skullfire Sword
 item.akashic_record.name=Akashic Records
 item.orb_armok.name=Blood Orb of Armok
